syntax = "proto3";
option csharp_namespace = "AuthenticationService.Grpc";

service AccountService{
  rpc CreateAccount (CreateAccountRequest) returns (AccountResponse);
}

message CreateAccountRequest {
  string email = 2;
  string username = 3;
}

message AccountResponse {
  int64 id = 1;
  int64 profileId = 2;
  string email = 3;
  string username = 4;
}